01-12-23 spacing issue fixed

--- a/src/components/blogCards/blogCards.scss
+++ b/src/components/blogCards/blogCards.scss
@@ -1,12 +1,12 @@
 @import "../../variables.scss";
 
 .blogCards {
-  margin: 138px 0 150px;
+  padding: 138px 0 150px;
   @media (max-width: 991px) {
-    margin: 110px 0 130px;
+    padding: 110px 0 130px;
   }
   @media (max-width: 767px) {
-    margin: 60px 0 80px;
+    padding: 60px 0 80px;
   }
   .blog_container {
     max-width: 1320px;
