--- a/src/components/leftRightImageContent/leftRightImageContent.scss
+++ b/src/components/leftRightImageContent/leftRightImageContent.scss
@@ -1,10 +1,10 @@
 .leftRightImageContent{
-    margin: 100px 0;
+    padding: 100px 0;
     @media(max-width:991px){
-        margin: 80px 0;
+        padding: 80px 0;
     }
     @media(max-width:767px){
-        margin: 50px 0;
+        padding: 50px 0;
     }
     &_wrapper{
 
