--- a/src/components/meetOurDirector/meetOurDirector.scss
+++ b/src/components/meetOurDirector/meetOurDirector.scss
@@ -2,7 +2,7 @@
 
 .meetOurDirector {
   &_wrapper {
-    margin: 84px 0 126px;
+    padding: 84px 0 126px;
     .heading {
       margin: 0 0 40px 60px;
       @media (max-width: 1199px) {
